# podcast-smart-trim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: analyze.py  audio.py  main.py  transcribe.py
tests/: test_audio_processing.py  test_debug_mode.py
